--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page {
-  max-width: 1280px;
+  width: 100%;
+  min-height: 100vh;
   background-color: black;
   margin: 0 auto;
   font-family: "Inter", Arial, sans-serif;
@@ -10,6 +11,7 @@
 }
 @media screen and (max-width: 1024px) {
   .page{
-    max-width: 320px;
+     max-width: 320px; 
+   
   }
 }
